[gd_scene load_steps=5 format=3 uid="uid://ctr6b2gs1n7kh"]

[ext_resource type="Script" path="res://MainMenu/options_menu.gd" id="1_o0f0d"]
[ext_resource type="AudioStream" uid="uid://cdmhc07drpl7e" path="res://MainMenu/menu_music.mp3" id="2_bhmif"]
[ext_resource type="Texture2D" uid="uid://dtqj6weh4wbt1" path="res://TurnBasedSystem&Scene/Placeholder Sprites/cegqlbo71df61.png" id="3_c5x0k"]
[ext_resource type="Texture2D" uid="uid://b3u2hv2cxmwp5" path="res://MainMenu/Screenshot 2023-12-03 233104.png" id="4_6dikm"]

[node name="OptionsMenu" type="Node2D"]
position = Vector2(568, 340)
script = ExtResource("1_o0f0d")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="music_volume_slider" type="HSlider" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.079
anchor_top = 0.142
anchor_right = 0.919
anchor_bottom = 0.301
offset_left = -0.00800323
offset_top = -0.0160065
offset_right = 3.24597
offset_bottom = 0.0279694
value = 100.0
metadata/_edit_use_anchors_ = true

[node name="sound_volume_slider" type="HSlider" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.079
anchor_top = 0.356
anchor_right = 0.918
anchor_bottom = 0.506
offset_left = -0.00800323
offset_top = 0.311996
offset_right = 4.39783
offset_bottom = 0.119995
value = 100.0
metadata/_edit_use_anchors_ = true

[node name="toggle_fullscreen" type="CheckButton" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.426
anchor_top = 0.577
anchor_right = 0.588
anchor_bottom = 0.671
offset_left = 0.247955
offset_top = 0.103973
offset_right = 0.380005
offset_bottom = -0.212006
text = "Full Screen"
metadata/_edit_use_anchors_ = true

[node name="btn_save_options" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.528
anchor_top = 0.824
anchor_right = 0.655
anchor_bottom = 0.924
offset_left = -0.255981
offset_top = -7.95203
offset_right = 0.439941
offset_bottom = 0.247986
pivot_offset = Vector2(549, -104)
text = "Save"

[node name="btn_dontsave_options" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.351
anchor_top = 0.824
anchor_right = 0.48
anchor_bottom = 0.924
offset_left = -0.35202
offset_top = -7.95203
offset_right = 0.039978
offset_bottom = 0.247986
text = "Don't Save"

[node name="label_music_volume" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.449
anchor_top = 0.142
anchor_right = 0.543
anchor_bottom = 0.182
offset_left = -0.248047
offset_top = -0.0160065
offset_right = 0.463928
offset_bottom = 0.0639954
text = "Music Volume: 100"

[node name="label_sound_volume" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.449
anchor_top = 0.373
anchor_right = 0.546
anchor_bottom = 0.418
offset_left = -0.248047
offset_top = -18.704
offset_right = 18.008
offset_bottom = -18.864
text = "Sound Volume: 100"
metadata/_edit_use_anchors_ = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bhmif")
autoplay = true
bus = &"Music"

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -634.0
offset_top = -391.0
offset_right = 6005.0
offset_bottom = 3379.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_c5x0k")

[node name="TextureRect2" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.964706)
offset_left = -634.0
offset_top = -391.0
offset_right = 6005.0
offset_bottom = 3379.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_6dikm")

[connection signal="value_changed" from="CanvasLayer/music_volume_slider" to="." method="on_music_volume_changed"]
[connection signal="value_changed" from="CanvasLayer/sound_volume_slider" to="." method="on_sound_volume_changed"]
[connection signal="toggled" from="CanvasLayer/toggle_fullscreen" to="." method="on_fullscreen_toggle_changed"]
[connection signal="pressed" from="CanvasLayer/btn_save_options" to="." method="on_save_options_changed"]
[connection signal="pressed" from="CanvasLayer/btn_dontsave_options" to="." method="on_dont_save_options_changed"]
